comecei a escrever o conteudo

--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
 <body>
     <main>
         <header>
-            <h1>Titulo do site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
 
         <article>
-            <h2>Artigo 001</h2>
-            <p>texto artigo 01</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore exercitationem nisi, perferendis, aut ab rem sint recusandae assumenda nostrum labore eos facere aspernatur repellat porro ex doloremque sit impedit? Voluptas?</p>
         </article>
 
         <article>
-            <h2>Artigo 002</h2>
-            <p>texto artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet ex quidem sapiente, inventore labore sequi, nisi ut dolores eum, illo dignissimos saepe! Nemo veritatis repellat veniam inventore quo perferendis odio.</p>
         </article>
     </main>
     
