--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 
         <article>
             <h2>Curso de HTML5 com CSS3</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore exercitationem nisi, perferendis, aut ab rem sint recusandae assumenda nostrum labore eos facere aspernatur repellat porro ex doloremque sit impedit? Voluptas?</p>
+            <p>A HTML é uma linguagem de marcação para a criação de sites. Atualmente na versão 5, ela usa a semântica dos elementos para criar o conteúdo de uma página Web. Com as CSS, criamos as configurações visuais que um site vai ter.</p>
         </article>
 
         <article>
             <h2>Curso de JavaScript</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet ex quidem sapiente, inventore labore sequi, nisi ut dolores eum, illo dignissimos saepe! Nemo veritatis repellat veniam inventore quo perferendis odio.</p>
+            <p>JavaScript</abbr> é uma linguagem de script criada para aumentar a interatividade entre um site e seus visitantes. Os códigos em JS são executados dentro do navegador e dão acesso aos elementos HTML por meio do DOM.</p>
         </article>
     </main>
     
